Branched to feat2

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -10,26 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "* master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
@@ -40,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -49,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 7e72225] Modified some code\n",
-      " 1 file changed, 172 insertions(+), 14 deletions(-)\n",
+      "[master 499bd47] Preparing to branch to feat2 branch\n",
+      " 1 file changed, 20 insertions(+), 11 deletions(-)\n",
       "Branch master set up to track remote branch master from origin.\n"
      ]
     },
@@ -59,15 +52,15 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   fe7a857..7e72225  master -> master\n"
+      "   9a1a201..499bd47  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Modified some code'\n",
-    "git push --set-upstream origin master"
+    "git commit -m 'Branched to feat2'\n",
+    "git push --set-upstream origin feat2/wip"
    ]
   },
   {
