--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,26 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "* feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'master'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
