Branched back to master

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,37 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "* feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'master'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 8830e17] Finised testing\n",
-      " 1 file changed, 1380 insertions(+), 1410 deletions(-)\n",
+      "[feat2/wip e178940] Branched back to master\n",
+      " 1 file changed, 14 insertions(+), 8 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -61,14 +55,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   485571a..8830e17  feat2/wip -> feat2/wip\n"
+      "   2c7f904..e178940  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finised testing'\n",
+    "git commit -m 'Branched back to master'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
