Before Branched back to master

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -10,37 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "* feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'master'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -49,9 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 3ffeab2] Branched to feat2\n",
-      " 1 file changed, 626 insertions(+)\n",
-      " create mode 100644 Test_data.ipynb\n",
+      "[feat2/wip 2c7f904] Modified some code before branch to master\n",
+      " 1 file changed, 98 insertions(+), 23 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -60,14 +53,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   a46914f..3ffeab2  feat2/wip -> feat2/wip\n"
+      "   3ffeab2..2c7f904  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Branched to feat2'\n",
+    "git commit -m 'Modified some code before branch to master'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
