--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +23,7 @@
      "text": [
       "error: Your local changes to the following files would be overwritten by checkout:\n",
       "\tTest_data.ipynb\n",
+      "\tTitanic.ipynb\n",
       "Please commit your changes or stash them before you switch branches.\n",
       "Aborting\n"
      ]
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -45,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip e178940] Branched back to master\n",
-      " 1 file changed, 14 insertions(+), 8 deletions(-)\n",
+      "[feat2/wip 73141b9] Branched back to master\n",
+      " 1 file changed, 13 insertions(+), 19 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -55,13 +56,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   2c7f904..e178940  feat2/wip -> feat2/wip\n"
+      "   e178940..73141b9  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
+    "git add Test_data.ipynb\n",
     "git commit -m 'Branched back to master'\n",
     "git push --set-upstream origin feat2/wip"
    ]
