Before Branched back to master

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,6 @@
      "output_type": "stream",
      "text": [
       "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTest_data.ipynb\n",
       "\tTitanic.ipynb\n",
       "Please commit your changes or stash them before you switch branches.\n",
       "Aborting\n"
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -46,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 73141b9] Branched back to master\n",
-      " 1 file changed, 13 insertions(+), 19 deletions(-)\n",
+      "[feat2/wip ced2352] Before Branched back to master\n",
+      " 2 files changed, 20 insertions(+), 25 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -56,15 +55,15 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   e178940..73141b9  feat2/wip -> feat2/wip\n"
+      "   73141b9..ced2352  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git add Titanic.ipynb\n",
-    "git add Test_data.ipynb\n",
-    "git commit -m 'Branched back to master'\n",
+    "git add 'Titanic.ipynb'\n",
+    "git add 'Test_data.ipynb'\n",
+    "git commit -m 'Before Branched back to master'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
