Modified some code to fix non-matched features problem

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,14 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "* master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'cost1/wip'"
+    "git branch"
    ]
   },
   {
@@ -54,7 +72,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added some markdown'\n",
+    "git commit -m 'Modified some code to fix non-matched features problem'\n",
     "git push"
    ]
   },
@@ -69,11 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/theerit/anaconda/envs/ipykernel_py2/lib/python2.7/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline \n",
     "import requests \n",
@@ -99,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +141,15 @@
    ],
    "source": [
     "train = pd.read_csv('Train.csv')\n",
-    "#test = pd.read_csv('Test.csv')\n",
+    "test = pd.read_csv('Test.csv')\n",
+    "#Concate train and test to avoid mismatch features in the testing phase\n",
+    "train_objs_num = len(train)\n",
+    "dataset = pd.concat(objs=[train, test], axis=0)\n",
+    "#dataset = pd.get_dummies(dataset)\n",
+    "#train = dataset.copy(dataset[:train_objs_num])\n",
+    "train = dataset[:train_objs_num].copy()\n",
+    "#test = dataset.copy(dataset[train_objs_num:])\n",
+    "test = dataset[train_objs_num:].copy()\n",
     "print(train.shape)"
    ]
   },
