Finished testing with adding features for test set

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,37 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "* master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat2/wip'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -55,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master a926d18] Modified some code to fix non-matched features problem\n",
-      " 1 file changed, 44 insertions(+), 9 deletions(-)\n"
+      "[master fe3cf15] Finished testing with adding features for test set\n",
+      " 1 file changed, 290 insertions(+), 495 deletions(-)\n"
      ]
     },
     {
@@ -64,14 +59,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   61cd36e..a926d18  master -> master\n"
+      "   a926d18..fe3cf15  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Modified some code to fix non-matched features problem'\n",
+    "git commit -m 'Finished testing with adding features for test set'\n",
     "git push"
    ]
   },
@@ -1284,6 +1279,20 @@
     "clf2.fit(X_train,y_train)\n",
     "from sklearn.metrics import accuracy_score\n",
     "print('Accuracy:'+str(accuracy_score(y_train,clf2.predict(X_train))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "# save the model to disk\n",
+    "filename = 'master.sav'\n",
+    "pickle.dump(clf2, open(filename, 'wb'))"
    ]
   },
   {
