Finished testing with adding features for test set

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -41,11 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master f6e5f5c] Appears that master branch cannot submit test\n",
+      " 1 file changed, 728 insertions(+), 603 deletions(-)\n",
+      " rewrite Test_data.ipynb (80%)\n",
+      "Branch master set up to track remote branch master from origin.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      "   fe3cf15..f6e5f5c  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
