--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master fe3cf15] Finished testing with adding features for test set\n",
-      " 1 file changed, 290 insertions(+), 495 deletions(-)\n"
+      "[master 677e30f] Finished testing with adding features for test set\n",
+      " 1 file changed, 28 insertions(+), 19 deletions(-)\n"
      ]
     },
     {
@@ -59,13 +59,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   a926d18..fe3cf15  master -> master\n"
+      "   f6e5f5c..677e30f  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git add Titanic.ipynb\n",
+    "git add 'Titanic.ipynb'\n",
+    "git add 'Test_data.ipynb'\n",
     "git commit -m 'Finished testing with adding features for test set'\n",
     "git push"
    ]
