Start adding code for test set feature application

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -63,7 +63,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Before Branched back to master'\n",
+    "git commit -m 'Start adding code for test set feature application'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
