Finished testing and creating submission file

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -49,8 +49,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 2c7f904] Modified some code before branch to master\n",
-      " 1 file changed, 98 insertions(+), 23 deletions(-)\n",
+      "[feat2/wip 70bc728] Modified code for creating submission file from prediction\n",
+      " 1 file changed, 955 insertions(+), 757 deletions(-)\n",
+      " rewrite Test_data.ipynb (89%)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -59,20 +60,20 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   3ffeab2..2c7f904  feat2/wip -> feat2/wip\n"
+      "   ad28b4d..70bc728  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Modified code for creating submission file from prediction'\n",
+    "git commit -m 'Finished testing and creating submission file'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -841,20 +842,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "test = pd.read_csv('Test.csv')\n",
-    "sub_file = pd.concat([test['PassengerId'],pd.DataFrame(Y_predict)],axis=1)\n",
-    "sub_file.columns =['PassengerId','Survived']"
+    "test_temp = pd.read_csv('Test.csv')\n",
+    "sub_file = pd.concat([test_temp['PassengerId'],pd.DataFrame(Y_predict)],axis=1)\n",
+    "sub_file.columns =['PassengerId','Survived']\n",
+    "sub_file = sub_file.astype(int)\n",
+    "#pd.options.display.float_format = '{:,.0f}'.format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -875,27 +878,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>892</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>893</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>894</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>895</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>896</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -903,14 +906,14 @@
       ],
       "text/plain": [
        "   PassengerId  Survived\n",
-       "0          892       0.0\n",
-       "1          893       0.0\n",
-       "2          894       0.0\n",
-       "3          895       0.0\n",
-       "4          896       0.0"
+       "0          892         0\n",
+       "1          893         0\n",
+       "2          894         0\n",
+       "3          895         0\n",
+       "4          896         0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,14 +924,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sub_file.to_csv('')"
+    "sub_file.to_csv(path_or_buf = submission_name,index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
