Finish testing (added test feature for matching purpose)

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -49,9 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 70bc728] Modified code for creating submission file from prediction\n",
-      " 1 file changed, 955 insertions(+), 757 deletions(-)\n",
-      " rewrite Test_data.ipynb (89%)\n",
+      "[feat2/wip dd6aff5] Finished testing and creating submission file\n",
+      " 1 file changed, 36 insertions(+), 24 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -60,7 +59,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   ad28b4d..70bc728  feat2/wip -> feat2/wip\n"
+      "   70bc728..dd6aff5  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
