--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -51,9 +51,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 7175585] Fixed the code in model file to ensure proper feature matching in test data\n",
-      " 2 files changed, 1796 insertions(+), 1686 deletions(-)\n",
-      " rewrite Test_data.ipynb (85%)\n",
+      "[feat2/wip ad28b4d] Finish testing (added test feature for matching purpose)\n",
+      " 1 file changed, 959 insertions(+), 952 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -62,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   d6a0307..7175585  feat2/wip -> feat2/wip\n"
+      "   7175585..ad28b4d  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
